--- a/src/pages/registration/formRegistration.scss
+++ b/src/pages/registration/formRegistration.scss
@@ -15,4 +15,23 @@
     font-size: 50px;
     padding-bottom: 40px;
   }
+
+  h1 {
+    color: rgb(22, 12, 75);
+    padding-top: 10px;
+    padding-bottom: 20px;
+    text-align: center;
+  }
+  Button {
+    transition: all 0.5s;
+  }
+
+  Button:hover {
+    transform: scale(110%);
+  }
+  .send {
+    Button:hover {
+      box-shadow: 0 0 20px rgb(10, 59, 107);
+    }
+  }
 }
